--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
   background-color: #222;
   color: white;
 }
+
+@media screen and (min-width: 1100px) {
+  .wrapper {
+    width: 1100px;
+    margin: 0 auto;
+  }
+}
