readme, tweak build output, tweak css

--- a/src/Button.css
+++ b/src/Button.css
@@ -8,6 +8,7 @@
   border: 1px solid var(--maroon);
   border-radius: 3px;
   padding: 0.3rem 0.5rem;
+  background: transparent;
   color: var(--maroon);
   font-size: 0.9rem;
   transition: all 0.1s ease-in;
