--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,16 +1,29 @@
-.App-header {
-  padding: 3rem;
-  background-color: #222;
-  color: white;
+.wrapper {
+  margin: 0 1rem;
 }
 
 section {
   margin-bottom: 3rem;
 }
 
-@media screen and (min-width: 1100px) {
+.App-header {
+  padding: 3rem 3rem 3rem 0;
+  background-color: #222;
+  color: white;
+}
+
+@media screen and (min-width: 768px) {
   .wrapper {
-    width: 1100px;
+    margin: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .wrapper {
+    width: 900px;
     margin: 0 auto;
+  }
+  .App-header {
+    padding-right: 0;
   }
 }
