--- a/src/containers/Conversions.css
+++ b/src/containers/Conversions.css
@@ -1,10 +1,19 @@
 @import '../variables.css';
 
+.form-datetype {
+  display: flex;
+  flex-direction: column;
+}
+
 .label-radio {
   margin-right: 0.5rem;
-  margin-left: 0.1rem;
+  margin-bottom: 0.3rem;
   position: relative;
   top: 1px;
+}
+
+.label-radio input {
+  margin-right: 0.3rem;
 }
 
 .form-convert {
@@ -14,15 +23,23 @@
 }
 
 .form-convert input {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .result-line {
-  display: flex;
-  align-items: baseline;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 }
 
-.result-span {
+.result-title {
+  font-weight: bold;
+}
+
+.result-date {
   margin-right: 0.5rem;
+}
+
+@media screen and (min-width: 800px) {
+  .form-datetype {
+    flex-direction: row;
+  }
 }
